// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bounds > Properly generates documentation for modules which contain bounds > # Of Files Generated 1`] = `11`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: bounds-module 1.x.x
    items:
    - name: bounds-module 1.x.x
      href: bounds-module-1xx/bounds-module.md
    - name: ClassWithBounds
      href: bounds-module-1xx/ClassWithBounds.md
    - name: InterfaceWithBounds
      href: bounds-module-1xx/InterfaceWithBounds.md
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/bounds-module-1xx/ClassWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module-1xx.ClassWithBounds Class
description: Contents of the bounds-module.ClassWithBounds class (Version 1.x.x).
---
# ClassWithBounds Class (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/bounds-module/ClassWithBounds.md).

## Properties

### **r**
\`r: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`0\` , \`0\`]
  - This property can't be used in restricted-execution mode.

### **s**
\`s: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`-255\`
  - This property can't be used in restricted-execution mode.

### **t**
\`t: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`1\`
  - This property can't be used in restricted-execution mode.

### **u**
\`u: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **v**
\`v: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`-255\` , \`-1\`]
  - This property can't be used in restricted-execution mode.

### **w**
\`w: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **x**
\`x: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property can't be used in restricted-execution mode.

### **y**
\`y: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`255\`
  - This property can't be used in restricted-execution mode.

### **z**
\`z: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`1\` , \`255\`]
  - This property can't be used in restricted-execution mode.

## Methods
- [methodThatTakesBoundedValue](#methodthattakesboundedvalue)

### **methodThatTakesBoundedValue**
\`
methodThatTakesBoundedValue(s: number, t: number, u: number, v: number, w: number, x: number, y: number, z: number): void
\`

#### **Parameters**
- **s**: *number*
  Minimum Bound: \`-255\`
- **t**: *number*
  Maximum Bound: \`1\`
- **u**: *number*
- **v**: *number*
  Bounds: [\`-255\` , \`-1\`]
- **w**: *number*
  Bounds: [\`1\` , \`255\`]
- **x**: *number*
  Minimum Bound: \`1\`
- **y**: *number*
  Maximum Bound: \`255\`
- **z**: *number*

**Returns** *void*
  
Notes:
- This function can't be called in restricted-execution mode.
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/bounds-module-1xx/InterfaceWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module-1xx.InterfaceWithBounds Interface
description: Contents of the bounds-module.InterfaceWithBounds class (Version 1.x.x).
---
# InterfaceWithBounds Interface (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/bounds-module/InterfaceWithBounds.md).

## Properties

### **boundedInterfaceProperty**
\`boundedInterfaceProperty?: number[];\`

Type: *number*[]

Notes:
  - This property has a bounds of [\`0\` , \`1000\`]
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/bounds-module-1xx/bounds-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module-1xx Module
description: Contents of the bounds-module module (Version 1.x.x)
---
# \`bounds-module\` Module (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/bounds-module/bounds-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "bounds-module",
    "version": "1.0.0"
}
\`\`\`

## Available Versions
- \`1.0.0\`

## Classes
- [ClassWithBounds](ClassWithBounds.md)

## Interfaces
- [InterfaceWithBounds](InterfaceWithBounds.md)
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: bounds-module
    items:
    - name: bounds-module
      href: bounds-module/bounds-module.md
    - name: bounds-module Changelog
      href: bounds-module/changelog.md
    - name: ClassWithBounds
      href: bounds-module/ClassWithBounds.md
    - name: InterfaceWithBounds
      href: bounds-module/InterfaceWithBounds.md
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/ClassWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module.ClassWithBounds Class
description: Contents of the bounds-module.ClassWithBounds class.
---
# ClassWithBounds Class

## Properties

### **r**
\`r: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`0\` , \`0\`]
  - This property can't be used in restricted-execution mode.

### **s**
\`s: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property can't be used in restricted-execution mode.

### **t**
\`t: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`255\`
  - This property can't be used in restricted-execution mode.

### **u**
\`u: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **v**
\`v: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`1\` , \`255\`]
  - This property can't be used in restricted-execution mode.

### **w**
\`w: number;\`

Type: *number*

Notes:
  - This property has a bounds of [\`1\` , \`255\`]
  - This property can't be used in restricted-execution mode.

### **x**
\`x: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`255\`
  - This property can't be used in restricted-execution mode.

### **y**
\`y: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property can't be used in restricted-execution mode.

### **z**
\`z: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

## Methods
- [methodThatTakesBoundedValue](#methodthattakesboundedvalue)

### **methodThatTakesBoundedValue**
\`
methodThatTakesBoundedValue(s: number, t: number, u: number, v: number, w: number, x: number, y: number, z: number): void
\`

#### **Parameters**
- **s**: *number*
  Minimum Bound: \`1\`
- **t**: *number*
  Maximum Bound: \`255\`
- **u**: *number*
- **v**: *number*
  Bounds: [\`1\` , \`255\`]
- **w**: *number*
- **x**: *number*
  Maximum Bound: \`255\`
- **y**: *number*
  Minimum Bound: \`1\`
- **z**: *number*
  Bounds: [\`1\` , \`255\`]

**Returns** *void*
  
Notes:
- This function can't be called in restricted-execution mode.
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/InterfaceWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module.InterfaceWithBounds Interface
description: Contents of the bounds-module.InterfaceWithBounds class.
---
# InterfaceWithBounds Interface

## Properties

### **boundedInterfaceProperty**
\`boundedInterfaceProperty?: number[];\`

Type: *number*[]

Notes:
  - This property has a bounds of [\`0\` , \`1000\`]
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/bounds-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module Module
description: Contents of the bounds-module module
---
# \`bounds-module\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "bounds-module",
    "version": "2.0.0"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.0.0\`

### Prior Versions

The following API versions are from a major version that is documented here: [*bounds-module*](../../../priorscriptapi/bounds-module-1xx/bounds-module.md):
- \`1.0.0\`


## Classes
- [ClassWithBounds](ClassWithBounds.md)

## Interfaces
- [InterfaceWithBounds](InterfaceWithBounds.md)
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module Changelog
description: Changelog of the \`bounds-module\` module
---
# \`bounds-module\` Changelog

## Version Changes
- [2.0.0](#200)
- [1.0.0](#100)

## 2.0.0
#### Changed *[\`ClassWithBounds\`](ClassWithBounds.md)*
- Changed minimum bound of \`-255\` to \`1\` for property *[\`s\`](ClassWithBounds.md#s)* 
- Changed maximum bound of \`1\` to \`255\` for property *[\`t\`](ClassWithBounds.md#t)* 
- Changed minimum bound of \`-255\` to \`1\` for property *[\`v\`](ClassWithBounds.md#v)* 
- Changed maximum bound of \`-1\` to \`255\` for property *[\`v\`](ClassWithBounds.md#v)* 
- Added minimum bound of \`1\` for property *[\`w\`](ClassWithBounds.md#w)* 
- Added maximum bound of \`255\` for property *[\`w\`](ClassWithBounds.md#w)* 
- Removed minimum bound for property *[\`x\`](ClassWithBounds.md#x)*
- Added maximum bound of \`255\` for property *[\`x\`](ClassWithBounds.md#x)* 
- Added minimum bound of \`1\` for property *[\`y\`](ClassWithBounds.md#y)* 
- Removed maximum bound for *[\`y\`](ClassWithBounds.md#y)*
- Removed minimum bound for property *[\`z\`](ClassWithBounds.md#z)*
- Removed maximum bound for *[\`z\`](ClassWithBounds.md#z)*
- Changed function *[\`methodThatTakesBoundedValue\`](ClassWithBounds.md#methodthattakesboundedvalue)*
  - Changed minimum bound from \`-255\` to \`1\` for argument \`s\`
  - Changed maximum bound from \`1\` to \`255\` for argument \`t\`
  - Changed minimum bound from \`-255\` to \`1\` for argument \`v\`
  - Changed maximum bound from \`-1\` to \`255\` for argument \`v\`
  - Removed minimum bound of \`1\` from argument \`w\`
  - Removed maximum bound of \`255\` from argument \`w\`           
  - Removed minimum bound of \`1\` from argument \`x\`
  - Added maximum bound of \`255\` to argument \`x\`
  - Added minimum bound of \`1\` to argument \`y\`
  - Removed maximum bound of \`255\` from argument \`y\`           
  - Added minimum bound of \`1\` to argument \`z\`
  - Added maximum bound of \`255\` to argument \`z\`
## 1.0.0
#### Added \`bounds-module\` Module
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > typescript/bounds-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "bounds-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithBounds {
    private constructor();
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [0 , 0]
     */
    r: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Minimum Value: -255
     */
    s: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Maximum Value: 1
     */
    t: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    u: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [-255 , -1]
     */
    v: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    w: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Minimum Value: 1
     */
    x: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Maximum Value: 255
     */
    y: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [1 , 255]
     */
    z: number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     * @param s
     * Minimum value: -255
     * @param t
     * Maximum value: 1
     * @param v
     * Bounds: [-255 , -1]
     * @param w
     * Bounds: [1 , 255]
     * @param x
     * Minimum value: 1
     * @param y
     * Maximum value: 255
     */
    methodThatTakesBoundedValue(
        s: number,
        t: number,
        u: number,
        v: number,
        w: number,
        x: number,
        y: number,
        z: number
    ): void;
}

export interface InterfaceWithBounds {
    /**
     * Bounds: [0 , 1000]
     */
    boundedInterfaceProperty?: number[];
}
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > typescript/bounds-module@2.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "bounds-module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithBounds {
    private constructor();
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [0 , 0]
     */
    r: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Minimum Value: 1
     */
    s: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Maximum Value: 255
     */
    t: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    u: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [1 , 255]
     */
    v: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Bounds: [1 , 255]
     */
    w: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Maximum Value: 255
     */
    x: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * Minimum Value: 1
     */
    y: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    z: number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     * @param s
     * Minimum value: 1
     * @param t
     * Maximum value: 255
     * @param v
     * Bounds: [1 , 255]
     * @param x
     * Maximum value: 255
     * @param y
     * Minimum value: 1
     * @param z
     * Bounds: [1 , 255]
     */
    methodThatTakesBoundedValue(
        s: number,
        t: number,
        u: number,
        v: number,
        w: number,
        x: number,
        y: number,
        z: number
    ): void;
}

export interface InterfaceWithBounds {
    /**
     * Bounds: [0 , 1000]
     */
    boundedInterfaceProperty?: number[];
}
"
`;
